--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "cypress": "^13.8.1",
     "cypress-cucumber-preprocessor": "^4.3.1",
     "mochawesome": "^7.1.3"
+  },
+  "cypress-cucumber-preprocessor":{
+    "nonGlobalStepDefinitions": true,
+    "step_definitions": "cypress/e2e-tests/checkDataOnScreen"
   }
 }
